--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
-backend/node_modules
-backend/.keystone
-backend/.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-frontend/node_modules
-frontend/.next
-frontend/.env
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
