--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@keystone-6/document-renderer": "^1.1.0",
+    "@tanstack/react-query": "^4.0.10",
+    "axios": "^0.27.2",
     "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^4.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
