--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@keystone-6/document-renderer": "^1.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "graphql": "^16.5.0",
@@ -19,15 +21,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^4.0.0",
-    "styled-components": "^5.3.5"
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "18.0.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.25",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
