--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^4.0.0",
+    "styled-components": "^5.3.5",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "18.0.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
@@ -32,8 +32,6 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
