--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,17 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/index.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/index.jsx",
+    "components/Name/styles.js",
+    "components/Navigation/styles.js",
+    "components/Page/styles.js",
+    "components/SaintSummary/styles.js",
+    "pages/saints/styles.js",
+    "pages/saints/components/Powers/styles.js"
+  ],
   "exclude": ["node_modules"]
 }
