--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/carousel": "^5.2.3",
+    "@mantine/core": "^5.2.3",
+    "@mantine/hooks": "^5.2.3",
+    "@mantine/modals": "^5.2.3",
+    "@mantine/next": "^5.2.3",
+    "@mantine/nprogress": "^5.2.3",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
+    "embla-carousel-react": "^7.0.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "next": "12.2.2",
@@ -22,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-query": "^4.0.0",
     "styled-components": "^5.3.5",
+    "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
