refactor component folders

--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "@emotion/react": "^11.10.0",
+    "@apollo/client": "^3.7.1",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/carousel": "^5.2.3",
-    "@mantine/core": "^5.2.3",
-    "@mantine/hooks": "^5.2.3",
-    "@mantine/modals": "^5.2.3",
-    "@mantine/next": "^5.2.3",
-    "@mantine/nprogress": "^5.2.3",
-    "@tanstack/react-query": "^4.0.10",
+    "@mantine/carousel": "^5.7.1",
+    "@mantine/core": "^5.7.1",
+    "@mantine/hooks": "^5.7.1",
+    "@mantine/modals": "^5.7.1",
+    "@mantine/next": "^5.7.1",
+    "@mantine/nprogress": "^5.7.1",
+    "@tanstack/react-query": "^4.14.5",
     "axios": "^0.27.2",
-    "embla-carousel-react": "^7.0.1",
-    "graphql": "^16.5.0",
+    "embla-carousel-react": "^7.0.5",
+    "graphql": "^16.6.0",
     "graphql-request": "^4.3.0",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^4.0.0",
     "styled-components": "^5.3.5",
     "stylis-plugin-rtl": "^2.1.1",
@@ -39,9 +39,9 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.25",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2",
+    "eslint-config-next": "^13.0.2",
     "typescript": "4.7.4"
   }
 }
