--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@mantine/nprogress": "^5.9.5",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^0.27.2",
+    "dompurify": "^3.0.5",
     "embla-carousel-react": "^7.0.5",
     "graphql": "^16.6.0",
     "graphql-request": "^4.3.0",
+    "isomorphic-dompurify": "^1.8.0",
     "next": "^13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
