--- a/package.json
+++ b/package.json
@@ -13,39 +13,37 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
-    "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/carousel": "^5.9.5",
-    "@mantine/core": "^5.9.5",
-    "@mantine/hooks": "^5.9.5",
-    "@mantine/modals": "^5.9.5",
-    "@mantine/next": "^5.9.5",
-    "@mantine/nprogress": "^5.9.5",
+    "@mantine/carousel": "^6.0.16",
+    "@mantine/core": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
+    "@mantine/next": "^6.0.16",
     "@tanstack/react-query": "^4.29.19",
-    "axios": "^0.27.2",
+    "axios": "^1.4.0",
     "dompurify": "^3.0.5",
-    "embla-carousel-react": "^7.0.5",
+    "embla-carousel-react": "^8.0.0-rc11",
     "graphql": "^16.6.0",
-    "graphql-request": "^4.3.0",
+    "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
     "next": "^13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.7"
   },
   "devDependencies": {
-    "@types/node": "18.0.5",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.20.0",
+    "eslint": "8.45.0",
     "eslint-config-next": "^13.1.0",
-    "typescript": "4.7.4"
+    "typescript": "5.1.6"
   }
 }
