--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint && npx tsc --noEmit"
   },
   "engines": {
     "node": "18.16.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
@@ -44,6 +49,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.45.0",
     "eslint-config-next": "^13.1.0",
+    "husky": "^8.0.3",
     "typescript": "5.1.6"
   }
 }
