--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint && npx tsc --noEmit"
   },
   "engines": {
-    "node": "18.16.1"
+    "node": "20.5.0"
   },
   "husky": {
     "hooks": {
@@ -30,13 +30,14 @@
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "dompurify": "^3.0.5",
-    "embla-carousel-react": "^8.0.0-rc11",
+    "embla-carousel-react": "^7.0.0",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
     "next": "^13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16",
     "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^8.4.7"
