--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
     "next": "^13.1.0",
+    "nextjs-progressbar": "0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
