updated lock file

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "swiper": "^8.4.7"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "https://prerelease-registry.devprod.cloudflare.dev/next-on-pages/runs/5786546906/npm-package-next-on-pages-418",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -49,7 +50,6 @@
     "eslint": "8.45.0",
     "eslint-config-next": "^13.4.12",
     "husky": "^8.0.3",
-    "typescript": "5.1.6",
-    "@cloudflare/next-on-pages": "https://prerelease-registry.devprod.cloudflare.dev/next-on-pages/runs/5786546906/npm-package-next-on-pages-418"
+    "typescript": "5.1.6"
   }
 }
