--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "react-masonry-css": "^1.0.16",
     "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
-    "swiper": "^8.4.7"
+    "swiper": "^8.4.7",
+    "swr": "^2.2.1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "https://prerelease-registry.devprod.cloudflare.dev/next-on-pages/runs/5786546906/npm-package-next-on-pages-418",
+    "@cloudflare/next-on-pages": "^1.5.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
