--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "dompurify": "^3.0.5",
-    "embla-carousel-react": "^7.0.0",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
@@ -40,12 +39,10 @@
     "react-masonry-css": "^1.0.16",
     "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
-    "swiper": "^8.4.7",
     "swr": "^2.2.1",
-    "wrangler": "^3.5.0"
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.5.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
