--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.29.19",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "dompurify": "^3.0.5",
