--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.29.19",
-    "@trendyol-js/react-carousel": "^3.0.2",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "dompurify": "^3.0.5",
+    "embla-carousel-react": "^8.0.0-rc11",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
