--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nextjs-progressbar": "0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-masonry-css": "^1.0.16",
     "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
