--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.4.0",
     "dompurify": "^3.0.5",
     "embla-carousel-react": "^8.0.0-rc11",
+    "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
