--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@apollo/client": "^3.7.3",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
+    "@fortawesome/fontawesome-pro": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
