--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@apollo/client": "^3.7.3",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
+    "@fortawesome/fontawesome-pro": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/pro-duotone-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.29.19",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
+    "babel-plugin-macros": "^3.1.0",
     "dompurify": "^3.0.5",
     "embla-carousel-react": "^8.0.0-rc11",
     "fuse.js": "^6.6.2",
