--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-masonry-css": "^1.0.16",
+    "react-stars": "^2.2.5",
     "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.1",
