--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @fortawesome:registry=https://npm.fontawesome.com/
-//npm.fontawesome.com/:_authToken=${FONTAWESOME_NPM_AUTH_TOKEN}
+//npm.fontawesome.com/:_authToken=167C1859-52E2-4D7F-8BE3-4EBA83F00104
