--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && npx tsc --noEmit",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && npx tsc --noEmit",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "postbuild": "next-sitemap"
   },
   "engines": {
@@ -53,9 +54,13 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.45.0",
+    "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.12",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "typescript": "5.1.6"
   }
