--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^13.4.12",
     "next-sitemap": "^4.2.2",
     "nextjs-progressbar": "0.0.16",
+    "node-html-parser": "^6.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
@@ -47,6 +48,7 @@
     "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.1",
+    "tocbot": "^4.21.1",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
