--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@emotion/server": "^11.11.0",
     "@fortawesome/fontawesome-pro": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/pro-duotone-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
     "@tanstack/react-query": "^4.29.19",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
