--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && npx tsc --noEmit",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "postbuild": "next-sitemap"
   },
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/pro-duotone-svg-icons": "^6.4.2",
+    "@fortawesome/pro-regular-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
     "@tanstack/react-query": "^4.29.19",
@@ -48,10 +49,12 @@
     "react-loading-skeleton": "^3.3.1",
     "react-masonry-css": "^1.0.16",
     "react-stars": "^2.2.5",
+    "sass": "^1.66.1",
     "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.1",
     "tocbot": "^4.21.1",
+    "typewriter-effect": "^2.20.1",
     "usehooks-ts": "^2.9.1",
     "word-count": "^0.2.2"
   },
