--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && npx tsc --noEmit",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "postbuild": "next-sitemap"
   },
