--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
-    "next": "^13.4.20-canary.33",
+    "next": "^13.4.12",
     "next-sitemap": "^4.2.2",
     "nextjs-progressbar": "0.0.16",
     "node-html-parser": "^6.1.6",
