--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
-    "next": "13.4.19",
+    "next": "^13.5.2",
     "next-sitemap": "^4.2.2",
     "nextjs-progressbar": "0.0.16",
     "node-html-parser": "^6.1.6",
@@ -67,7 +67,7 @@
     "@typescript-eslint/parser": "^6.4.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.12",
+    "eslint-config-next": "^13.5.2",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
