--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "^1.8.0",
+    "js-cookie": "^3.0.5",
     "next": "^13.5.2",
     "next-sitemap": "^4.2.2",
     "nextjs-progressbar": "0.0.16",
@@ -50,7 +51,6 @@
     "react-masonry-css": "^1.0.16",
     "react-stars": "^2.2.5",
     "sass": "^1.66.1",
-    "styled-components": "6.0.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.1",
     "tocbot": "^4.21.1",
