--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "types/**/*",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "components/books/StarRating/styles."
   ],
   "exclude": ["node_modules"]
 }
