--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "word-count": "^0.2.2"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.6.3",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
