--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-masonry-css": "^1.0.16",
+    "react-simple-typewriter": "^5.0.1",
     "react-stars": "^2.2.5",
     "sass": "^1.66.1",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.4",
     "tocbot": "^4.21.1",
-    "typewriter-effect": "^2.20.1",
     "usehooks-ts": "^2.9.1",
     "word-count": "^0.2.2"
   },
