--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/books/StarRating/styles."
+    "components/books/StarRating/styles.",
+    "components/books/Hero/Herotsx"
   ],
   "exclude": ["node_modules"]
 }
