--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "^3.7.3",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
+    "@formspree/react": "^2.5.1",
     "@fortawesome/fontawesome-pro": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
