--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/pro-regular-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
+    "@sentry/nextjs": "^7.77.0",
     "@tanstack/react-query": "^4.29.19",
     "@vercel/analytics": "^1.0.1",
     "babel-plugin-macros": "^3.1.0",
@@ -41,6 +42,7 @@
     "node-html-parser": "^6.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-loading-skeleton": "^3.3.1",
     "react-masonry-css": "^1.0.16",
     "react-simple-typewriter": "^5.0.1",
