--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "word-count": "^0.2.2"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.34",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
