--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "node": "18.x"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.3",
-    "@emotion/react": "^11.11.1",
-    "@emotion/server": "^11.11.0",
     "@formspree/react": "^2.5.1",
     "@fortawesome/fontawesome-pro": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -27,32 +24,21 @@
     "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
     "@sentry/nextjs": "^7.77.0",
     "@tanstack/react-query": "^4.29.19",
-    "@vercel/analytics": "^1.0.1",
-    "babel-plugin-macros": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
-    "dompurify": "^3.0.5",
     "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
-    "isomorphic-dompurify": "^1.8.0",
     "js-cookie": "^3.0.5",
     "next": "^14.0.1",
     "next-sitemap": "^4.2.2",
     "nextjs-progressbar": "0.0.16",
-    "node-html-parser": "^6.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
     "react-loading-skeleton": "^3.3.1",
     "react-masonry-css": "^1.0.16",
     "react-simple-typewriter": "^5.0.1",
-    "react-stars": "^2.2.5",
     "sass": "^1.66.1",
-    "stylis-plugin-rtl": "^2.1.1",
-    "swr": "^2.2.4",
-    "tocbot": "^4.21.1",
-    "usehooks-ts": "^2.9.1",
-    "word-count": "^0.2.2"
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.34",
