--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nextjs-progressbar": "0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-loading-skeleton": "^3.3.1",
     "react-masonry-css": "^1.0.16",
     "react-simple-typewriter": "^5.0.1",
