--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/books/StarRating/styles.",
-    "components/books/Hero/Herotsx"
+    "utils/properties.js"
   ],
   "exclude": ["node_modules"]
 }
