--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npm config set legacy-peer-deps true",
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
@@ -11,7 +12,7 @@
     "postbuild": "next-sitemap"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "resolutions": {
     "sass": "^1.80.4",
