--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "engines": {
     "node": "20.x"
   },
+  "overrides": {
+    "@formspree/react": {
+      "react": "^18.0.0"
+    }
+  },
   "resolutions": {
     "sass": "^1.80.4",
     "sass-loader": "^16.0.2"
