--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "graphql-request": "^7.1.2",
     "js-cookie": "^3.0.5",
     "next": "^15.0.3",
+    "next-nprogress-bar": "^2.4.3",
     "next-sitemap": "^4.2.3",
-    "nextjs-progressbar": "0.0.16",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-ga4": "^2.1.0",
