--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "js-cookie": "^3.0.5",
+    "masonic": "^4.0.1",
     "next": "^15.0.3",
     "next-nprogress-bar": "^2.4.3",
     "next-sitemap": "^4.2.3",
